Fix content above menu (z-index, again)

--- a/Resources/Public/css/style.css
+++ b/Resources/Public/css/style.css
@@ -183,7 +183,7 @@ textarea.form-control {
 .logo-container{
   position: absolute;
   left: 70px;
-  z-index: 1;
+  z-index: 2;
   width: 200px;
   height: 200px;
   background-color: white;
@@ -615,6 +615,7 @@ h1.referral {
 
   .navbar-collapse{
     padding-bottom: 15px;
+    z-index: 2;
   }
 
   .mrL-270{
@@ -623,7 +624,7 @@ h1.referral {
 .logo-container {
     position: absolute;
     left: 45px;
-    z-index: 1;
+    z-index: 2;
     width: 200px;
     height: 200px;
     background-color: white;
